--- a/assets/css/tooplate-clean-work.css
+++ b/assets/css/tooplate-clean-work.css
@@ -664,9 +664,10 @@ strong {
   color: var(--primary-color);
 }
 
+/* Aturan untuk layar besar */
 .dropdown-menu {
   background: var(--white-color);
-  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   border: 0;
   display: inherit;
   opacity: 0;
@@ -675,6 +676,17 @@ strong {
   padding: 13px 0 10px 0;
   transition: all 0.3s;
   pointer-events: none;
+}
+
+/* Aturan untuk layar kecil (misalnya, kurang dari 768px) */
+@media (max-width: 768px) {
+  .dropdown-menu {
+      display: none; /* Menyembunyikan dropdown-menu pada layar kecil */
+      padding: 20px;
+      width: fit-content;
+      overflow: auto;
+      text-align: left; /* Mengatur teks agar bergerak ke kiri */
+  }
 }
 
 .dropdown-menu::before {
